--- a/description/reference.bib
+++ b/description/reference.bib
@@ -58,6 +58,30 @@ Selection
   publisher = {{IEEE} Computer Society}
 }
 
+@article{paper_amai,
+author    = {Roberto Amadini and
+               Maurizio Gabbrielli and
+               Jacopo Mauro},
+  title     = {Portfolio approaches for constraint optimization problems},
+  journal   = {Annals of Mathematics and Artificial Intelligence},
+  volume    = {76},
+  number    = {1-2},
+  pages     = {229--246},
+  year      = {2016},
+}
+
+@article{sunny,
+  author    = {Roberto Amadini and
+               Maurizio Gabbrielli and
+               Jacopo Mauro},
+  title     = {{SUNNY: a Lazy Portfolio Approach for Constraint Solving}},
+  journal   = {{TPLP}},
+  volume    = {14},
+  number    = {4-5},
+  pages     = {509--524},
+  year      = {2014},
+}
+
 @ARTICLE{Kohavi97wrappersfor,
     author = {Ron Kohavi and George H. John},
     title = {Wrappers for Feature Subset Selection},
