--- a/description/main.tex
+++ b/description/main.tex
@@ -75,9 +75,9 @@
 \begin{abstract}%   <- trailing '%' for backward compatibility of .sty file
 The SUNNY algorithm is a portfolio technique originally tailored for 
 Constraint Satisfaction Problems (CSPs). SUNNY allows to select a set of 
-solvers to be run to solve a given CSPs and was proven effective in the 
-context of the MiniZinc Challenge, i.e., the yearly international competition 
-for CSP solvers. In 2015, SUNNY was compared with other solver selectors in the 
+solvers to be run on a given CSP, and was proven to be effective in the 
+MiniZinc Challenge, i.e., the yearly international competition 
+for CP solvers. In 2015, SUNNY was compared with other solver selectors in the 
 first ICON Challenge on algorithm selection with less satisfactory performance.
 In this paper we briefly describe the new version of the SUNNY approach for 
 algorithm selection, that was submitted to the first Open Algorithm 
