--- a/description/main.tex
+++ b/description/main.tex
@@ -125,8 +125,8 @@ SUNNY-OASC has two execution modalities: \texttt{autok} and
 \texttt{fkvar}.
 
 \begin{itemize}
-\item The \texttt{autok} is a variant of T-SUNNY \cite{DBLP:conf/lion/LindauerBH16}, 
-i.e., an improvement of SUNNY-AS that trains also on the size of the neighborhood 
+\item The \texttt{autok} approach is a variant of T-SUNNY \citep{DBLP:conf/lion/LindauerBH16}, 
+an improvement of SUNNY-AS that trains also on the size of the neighborhood 
 $k$. \texttt{autok} is slightly different than T-SUNNY since the 
 reimplementation of T-SUNNY used a different algorithm to select the 
 solvers to use. To choose the solvers we used the original SUNNY-AS 
